<resources>
    <string name="app_name">资信助手</string>
    <string name="upload_idcard_positive">上传身份证正面照片</string>
    <string name="upload_idcard_reverse">上传身份证反面照片</string>
    <string name="upload_idcard_people">上传手持身份证照片</string>
    <string name="upload_idcard_tips">您的照片仅用于审核，我们将为您严格保密</string>
    <string name="next_step">下一步</string>
    <string name="check_id_info">验证身份信息</string>
    <string name="real_name">真实姓名</string>
    <string name="please_input_name">请输入姓名</string>
    <string name="please_input_idcard_num">请输入身份证号码</string>
    <string name="id_number">身份证号</string>
    <string name="id_check_tips">请如实填写本人信息，否则将影响测评</string>
    <string name="certification">认证</string>
    <string name="setting">设置</string>
    <string name="no_cert_list">暂无调查单</string>
    <string name="start_certification">\t向你发起调查</string>
    <string name="my_report_page">我的资信报告</string>
    <string name="certification_done">(已认证)</string>
    <string name="certification_not">未认证</string>
    <string name="no_addressbooks">暂无通讯录数据</string>
    <string name="all_match">完全匹配</string>
    <string name="all_match_2">模糊匹配</string>
    <string name="op_match">和运营商数据</string>
    <string name="op_match_no">和运营商数据不匹配</string>
    <string name="yes">是</string>
    <string name="address_is_use">和常用通话地址一致</string>
    <string name="address_no_use">和常用通话地址不一致</string>
    <string name="name_true">已实名认证</string>
    <string name="name_false">未实名认证</string>
    <string name="no_contacd">暂无紧急联系人</string>
    <string name="no_focus_on">暂无行业关注</string>
    <string name="report_prase">报告解析中...</string>
    <string name="no_camera_permission">没有获取到权限，无法使用相机和相册功能</string>
    <string name="service_time">服务时间:</string>
    <string name="service_phone">服务电话:</string>
    <string name="rh_no_report">您目前没有可供查看的报告，请进行认证后再进行查看。</string>
    <string name="rh_report_checkinto">您的信用信息查询请求已提交，请在24小时后访问平台获取结果。为保障您的信息安全，您申请的信用信息将于7日后自动清理，请及时获取查询结果。</string>
    <string name="rh_report_no_pass">很抱歉，您提交的个人信息验证未通过，如需重新查看报告，请重新进行认证。</string>
    <string name="rh_question_done1">1.您的查询申请已提交，若通过身份验证，会以短信形式将身份验证码发送到您预留手机上，请妥善保管，您可在24小时后访问平台获取结果。</string>
    <string name="rh_question_done2">2.为保护您的信息安全，您申请的信用信息产品将在平台上保留7个自然日，过时平台会自动清理，请及时登录查看结果。</string>
    <string name="rh_question_check_1">您的查询申请已提交</string>
    <string name="rh_question_check_2">您可在24小时后访问平台获取结果</string>
    <string name="rh_question_check_3">请及时登录查看结果</string>
    <string name="rh_anw_question_error">回答问题失败，请重试</string>
    <string name="rh_question_time_">您需要回答以下%d个问题，您还有</string>
    <string name="rh_question_time_2">的答题时间</string>
    <string name="rh_question_time_out">您的答题时间已经结束，请重新答题。</string>
    <string name="i_see">我知道了</string>
    <string name="rh_re_check">重新认证</string>
    <string name="rh_to_check">进行认证</string>
    <string name="rh_regi_tips">如果您没有办理过贷款或正在使用的信用卡，那么只能登录到中国人民银行征信中心选择“数字证书验证”方式验证身份注册。\n\n征信中心地址：https://ipcrs.pbccrc.org.cn/</string>
    <string name="rh_findpwd_tips">如果您安全等级过高，那么只能登录到中国人民银行征信中心进行修改。\n\n征信中心地址：https://ipcrs.pbccrc.org.cn/</string>
    <string name="rh_regi2_check1">登录名</string>
    <string name="rh_regi2_check2">确认密码</string>
    <string name="rh_regi2_check3">动态码</string>
    <string name="rh_regi_error">注册失败，请重试</string>
    <string name="rh_card_num">证件号码</string>
    <string name="rh_i_see_regi_page">我已阅读并同意</string>
    <string name="rh_loginname_tips">提示：登录名由6-16位数字、字母组成，不能有中文或特殊字符。</string>
    <string name="rh_loginpassword_tips">提示：密码长度必须在6-20之间，可以使用数字、小写字母和大写字母，但必须同时包含数字和字母。</string>
    <string name="rh_noreport_code_1">手机动态码</string>
    <string name="rh_noreport_code_2">获取动态码</string>
    <string name="rh_code_change">看不清楚？换一个</string>
    <string name="rh_find_pwd_check">您的重置密码申请已提交</string>
    <string name="rh_find_pwd_done">您的重置密码申请已提交，系统会对您的相关信息进行审核，审核结果将于24小时后反馈到您的手机，请注意查收。</string>
    <string name="rh_register_done_title">完成注册</string>
    <string name="rh_find_name_done">您的登录名已短信发送至平台预留的手机号码，请查收。</string>
    <string name="rh_find_name_error">找回登录失败，请重试</string>
    <string name="rh_find_name">找回登录名</string>
    <string name="rh_find_pwd_title">找回密码</string>
    <string name="rh_check_question_no_pass">必须对所有的题作答！</string>
    <string name="rh_bank_name">中国人民银行征信中心</string>
    <string name="please_input_phone_code">请输入验证码</string>
    <string name="rh_check_question">验证身份</string>
    <string name="please_input_login_name">请输入登录名</string>
    <string name="name">姓名</string>
    <string name="pass_code">验证码</string>
    <string name="rh_find_pwd_error">找回密码失败，请重试</string>
    <string name="rh_reset_pwd">设置新密码</string>
    <string name="rh_please_input_new_pwd">请确认新密码</string>
    <string name="rh_check_new_pwd">请确认新密码</string>
    <string name="rh_check_pwd_no_pass">两次密码输入不一致</string>
    <string name="rh_please_input_phone_code_2">请输入动态码</string>
    <string name="rh_cant_use">您安全等级过高，无法使用此功能。请自行前往官网修改。 /n 官网地址：https://ipcrs.pbccrc.org.cn/</string>
    <string name="rh_cant_use_question">您安全等级过高，无法进行问题验证。请前往官网进行验证。/n  官网地址：https://ipcrs.pbccrc.org.cn/</string>
    <string name="rh_new_pwd">新密码</string>
    <string name="rh_phone_code">手机动态码</string>
    <string name="rh_question_check">问题验证</string>
    <string name="please_input_pwd">请输入密码</string>
    <string name="rh_report">资信报告</string>
    <string name="rh_please_read_txt">请认真阅读并勾选同意服务协议</string>
    <string name="no_my_report">您目前没有资信报告</string>

</resources>
