<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@color/bg_gray"
        android:orientation="vertical">

        <FrameLayout
            android:id="@+id/layout_tips"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="0.5dp"
            android:background="#fdfbed"
            android:orientation="horizontal"
            android:paddingBottom="0.5dp"
            android:paddingTop="0.5dp">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginBottom="5dp"
                android:layout_marginLeft="15dp"
                android:layout_marginTop="5dp"
                android:gravity="center_vertical"
                android:text="@string/id_check_tips"
                android:textColor="#fda931"
                android:textSize="12sp" />

            <ImageView
                android:id="@+id/img_calcel_cert"
                android:layout_width="15dp"
                android:layout_height="15dp"
                android:layout_gravity="center_vertical|right"
                android:layout_marginRight="15dp"
                android:src="@drawable/x_delete" />
        </FrameLayout>


        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="1dp"
            android:background="@color/white"
            android:orientation="horizontal">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center_vertical"
                android:layout_margin="15dp"
                android:text="@string/real_name"
                android:textColor="@color/text_black_cd" />

            <EditText
                android:id="@+id/edit_name"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_gravity="center_vertical"
                android:layout_marginBottom="15dp"
                android:layout_marginRight="10dp"
                android:layout_marginTop="15dp"
                android:background="@null"
                android:hint="@string/please_input_name"
                android:textColor="@color/text_color"
                android:textColorHint="@color/text_hint_color"
                android:textSize="16sp" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/line_height"
            android:background="@color/white"
            android:orientation="horizontal">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center_vertical"
                android:layout_margin="15dp"
                android:text="@string/id_number"
                android:textColor="@color/text_black_cd" />

            <EditText
                android:id="@+id/edit_card_number"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_gravity="center_vertical"
                android:layout_marginBottom="15dp"
                android:layout_marginRight="10dp"
                android:layout_marginTop="15dp"
                android:background="@null"
                android:hint="@string/please_input_idcard_num"
                android:textColor="@color/text_color"
                android:textColorHint="@color/text_hint_color"
                android:textSize="16sp" />

        </LinearLayout>

        <Button
            android:id="@+id/but_sure"
            style="@style/common_button"
            android:layout_marginTop="40dp"
            android:text="@string/check_id_info" />

    </LinearLayout>
</layout>
