<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android">


    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_weight="1"
        android:background="@color/bg_gray">


        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="10dp"
                android:background="@color/white"
                android:orientation="horizontal"
                android:paddingBottom="15dp"
                android:paddingLeft="15dp"
                android:paddingRight="15dp"
                android:paddingTop="15dp"
                android:weightSum="2">

                <LinearLayout
                    android:id="@+id/layout_idcard_positive"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_marginRight="15dp"
                    android:layout_weight="1"
                    android:orientation="vertical">

                    <ImageView
                        android:id="@+id/img_idcard_positive"
                        android:layout_width="match_parent"
                        android:layout_height="120dp"
                        android:scaleType="fitXY"
                        android:src="@drawable/idcard_upload1" />

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_gravity="center"
                        android:layout_marginTop="15dp"
                        android:text="@string/upload_idcard_positive" />

                </LinearLayout>

                <LinearLayout
                    android:id="@+id/layout_idcard_reverse"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_marginRight="15dp"
                    android:layout_weight="1"
                    android:orientation="vertical">

                    <ImageView
                        android:id="@+id/img_idcard_reverse"
                        android:layout_width="match_parent"
                        android:layout_height="120dp"
                        android:scaleType="fitXY"
                        android:src="@drawable/idcard_upload2" />

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_gravity="center"
                        android:layout_marginTop="15dp"
                        android:text="@string/upload_idcard_reverse" />

                </LinearLayout>

            </LinearLayout>

            <LinearLayout
                android:id="@+id/layout_idcard_people"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="15dp"
                android:background="@color/white"
                android:orientation="vertical"
                android:paddingBottom="15dp"
                android:paddingLeft="15dp"
                android:paddingRight="15dp"
                android:paddingTop="15dp">


                <ImageView
                    android:id="@+id/img_idcard_people"
                    android:layout_width="match_parent"
                    android:layout_height="175dp"
                    android:src="@drawable/idcard_upload3" />

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center"
                    android:layout_marginTop="15dp"
                    android:text="@string/upload_idcard_people" />

            </LinearLayout>


            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:layout_marginBottom="10dp"
                android:layout_marginTop="15dp"
                android:text="@string/upload_idcard_tips"
                android:textSize="15sp" />

            <Button
                android:id="@+id/btn_next"
                style="@style/common_button"
                android:text="@string/next_step" />
        </LinearLayout>

    </ScrollView>


</layout>
